test/vm/errors/parser/import_bad_path.ach
// Parser error: import with non-string path
// Expected: error about expected string literal for import path

import 42 as numbers
